Добавлена аутентификация в core и core-query